<resources>
    <string name="app_name">Smart Mobility</string>
    <string name="title_activity_maps">Map</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    //IDs de serialização
    <string name="file_route">fileRoute</string>
    <string name="file_image">fileImage</string>
    <string name="temp_sensor_exists">TempSensorExists</string>
    <string name="route_nr">routeNr</string>
    <string name="start_route">startRoute</string>
    <string name="stop_route">stopRoute</string>

    //Nome de das rotas
    <string name="morning_pedal">Pedalada Matutina</string>
    <string name="afternoon_pedal">Pedalada Vespertina</string>
    <string name="evening_pedal">Pedalada Noturna</string>

    //Ids das transisções
    <string name="transition_route">imgRoute</string>
    <string name="transition_date">textViewDate</string>

    <string name="bike">Imagem da bike</string>
    <string name="foot">Imagem à pé</string>
    <string name="bus">Imagem do onibus</string>
    <string name="car">Imagem do carro</string>

    <string name="route_confirm_text">Você tem certeza que deseja terminar a rota?</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>

    <string name="tab_map">Mapa</string>
    <string name="tab_sensor">Sensores</string>
    <string name="tab_graph">Gráficos</string>

    <string name="facebook_app_id">470422676728744</string>
    <string name="fb_login_protocol_scheme">fb470422676728744</string>


    <string name="about">O Projeto de Extensão Ciência para Todos pretende coletar informações
        relativas ao: (A) meio ambiental, (B) comportamento de bicicletas no trânsito e (C) saúde
        do ciclista. Para isso o projeto está desenvolvendo um equipamento portátil chamado
        de B1K3 LAB, o laboratório móvel sobre rodas da UFPR.</string>

    <string name="new_message_notification_title_template">Controlador SmartMobility</string>


    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>




    <string-array name="gender">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outro</item>
    </string-array>

    <string-array name="scholarity">
        <item>Ensino Fundamental Completo</item>
        <item>Ensino Fundamental Incompleto</item>
        <item>Ensino Médio Completo</item>
        <item>Ensino Médio Incompleto</item>
        <item>Ensino Superior Completo</item>
        <item>Ensino Superior Incompleto</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>

    <string-array name="whatDefcy">
        <item>Auditiva</item>
        <item>Locomotiva</item>
        <item>Visual</item>
    </string-array>



</resources>
