<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <eu.long1.spacetablayout.SpaceTabLayout
            android:id="@+id/spaceTabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:button_color="@android:color/white"
            app:icon_one="@drawable/ic_map"
            app:icon_three="@drawable/ic_monitorament"
            app:icon_two="@drawable/ic_graphs"
            app:layout_behavior="eu.long1.spacetablayout.SpaceTabLayoutBehavior"
            app:number_of_tabs="three"
            app:starting_position="one"
            app:tab_color="@color/blueNpDeas"
            app:text_color="@android:color/white"
            app:text_one="@string/tab_map"
            app:text_three="@string/tab_graph"
            app:text_two="@string/tab_sensor" />

    </android.support.design.widget.CoordinatorLayout>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.npdeas.b1k3labapp.UI.Views.RouteControllButton
            android:id="@+id/fabStartRoute"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="80dp"
            android:layout_marginHorizontal="@dimen/fab_margin" />


    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.npdeas.b1k3labapp.UI.Views.ModalFloatingMenu
            android:id="@+id/fabMenuModal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="60dp"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/greenLightNpDeas"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/nav_menu" />

</android.support.v4.widget.DrawerLayout>